--- a/Page-2.html
+++ b/Page-2.html
@@ -31,7 +31,7 @@
     <meta property="og:title" content="Page 2">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="https://website3942566.nicepage.io/Page-2.html?version=be6aad0c-44e4-46c4-b774-4c86f827142d" data-home-page-title="Page 2" class="u-body u-xl-mode" data-lang="en"> 
+  <body class="u-body u-xl-mode" data-lang="en"> 
     <section class="u-clearfix u-image u-shading u-section-1" id="sec-4b2c">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-center u-container-style u-group u-group-1">
